<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <TextView
        android:id="@+id/tv_category"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        android:textColor="@color/purple_200"
        android:text="@string/dummyCategory"/>
    <TextView
        android:id="@+id/tv_title"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        tools:text="@string/dummyTitle"/>
    <TextView
        android:id="@+id/tv_writer"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="19sp"
        tools:text="@string/dummyBy"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/cover"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:riv_corner_radius="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cover1"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        android:text="@string/sinopsis"/>

    <TextView
        android:id="@+id/sinopsis"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:textSize="19sp"
        tools:text="@string/dummyText"/>

    <Button
        android:id="@+id/btn_subscribe"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/subscribe" />

</LinearLayout>