<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".ui.reading.ReadingActivity">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:text="@string/tquestion4"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:layout_below="@id/title">
        <TextView
            android:id="@+id/select"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:lineSpacingExtra="5sp"
            android:textSize="14sp"
            android:text="@string/select"
            />
        <TextView
            android:id="@+id/question"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:lines="2"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/question4"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp">
            <RadioButton
                android:id="@+id/radio1"
                android:layout_marginLeft="8dp"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/search_background"
                android:text="@string/rb41"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/search_background"
                android:text="@string/rb42" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/search_background"
                android:text="@string/rb43" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/search_background"
                android:text="@string/rb44" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="260dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/save" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>