<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".ui.reading.ReadingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:text="@string/summary_of_paragraph"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_paragraph"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:lineSpacingExtra="5sp"
            android:textSize="14sp"
            tools:text="@string/text2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:text="@string/summary_of_e_book"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_summary"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:lineSpacingExtra="5sp"
            android:textSize="14sp"
            tools:text="@string/rb11" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_below="@+id/summary"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/finish" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>